Added css file for styling and more html content for webpage

--- a/Content.html
+++ b/Content.html
@@ -5,12 +5,16 @@
 <head>
     <meta charset="utf-8" />
     <title>C Basics</title>
+    <link type="text/css" href="Style.css" rel="stylesheet" />
 </head>
 
 <body>
 
     <header>C Programming Guide For Java Developers</header>
 
+    <img src="C_pic.jpg" alt="C Programming Guide" class="topBanner">
+
+    <!--Source: https://www.codingunit.com/the-history-of-the-c-language-->
     <h2>C History</h2>
     <p>
         The C programming language as known to us today, was introduced in the early 1970s by Dennis M. Ritchie, and employee working for Bell Labs(AT&T). 
@@ -42,6 +46,13 @@
         Later on, the ANSI C standard was adopted by the International Standards Organization (ISO). The correct term should there fore be ISO C, but everybody still calls it ANSI C.
     </p>
 
+    <a href="https://en.wikipedia.org/wiki/C_(programming_language)">Click here to check out Wikipedia for more information</a>
+
+    <br>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/de2Hsvxaf8M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <!--Source: https://mkdev.me/en/posts/three-reasons-to-learn-c-in-2018-->
     <h2>Why should you learn C in 2018?</h2>
     <p>
         <ul>
@@ -77,20 +88,55 @@
         </ul>
     </p>
 
-    <h2>What are the differences between C and Java?</h2>
-    <table>
+    <a href="https://www.pluralsight.com/blog/software-development/why-every-programmer-should-learn-c">Click here for to know more about why you should learn the C programming language</a>
+
+    <!--Source: https://www.quora.com/Whats-the-main-difference-between-C-and-Java-->
+    <h2>What are the main differences between C and Java?</h2>
+    <table border="1px">
         <tr>
             <th>C</th>
             <th>Java</th>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>C is procedural</td>
+            <td>JAVA is Object-Oriented</td>
+        </tr>
+        <tr>
+            <td>C is a compiled language</td>
+            <td>Java is an Interpreted language</td>
+        </tr>
+        <tr>
+            <td>C is a low-level language</td>
+            <td>JAVA is a high-level language</td>
+        </tr>
+        <tr>
+            <td>C requires explicit handling of pointers</td>
+            <td>Pointer go backstage in JAVA</td>
+        </tr>
+        <tr>
+            <td>User-Based Memory Management in C</td>
+            <td>Behind-the-scenes Memory Management with JAVA</td>
         </tr>
     </table>
 
+    <!--Source: https://www.le.ac.uk/users/rjm1/cotter/page_05.htm-->
     <h2>What is C mainly used for?</h2>
-    <p></p>
+    <p>
+        C was initially used for system development work, in particular the programs that make-up the operating system. 
+        C produces code that runs nearly as fast as code written in assembly language. 
+        <ol>
+            Some examples of the use of C might be:
+            <li>Operating Systems</li>
+            <li>Language Compilers</li>
+            <li>Assemblers</li>
+            <li>Text Editors</li>
+            <li>Data Bases</li>
+            <li>Network Drivers</li>
+            <li>Utilities</li>
+        </ol>
+    </p>
+
+    <a href="">Click here to find out about more uses of C</a>
 
     <footer>
 		<p>&copy Arnav Singhania</p>
