Added pics, content and styling properties.

--- a/Content.html
+++ b/Content.html
@@ -91,6 +91,9 @@
     <a href="https://www.pluralsight.com/blog/software-development/why-every-programmer-should-learn-c">Click here for to know more about why you should learn the C programming language</a>
 
     <!--Source: https://www.quora.com/Whats-the-main-difference-between-C-and-Java-->
+
+    <img src="https://cdn-images-1.medium.com/max/2000/1*8-Oi8r8GyDmkhEQ8js5EZA.png">
+
     <h2>What are the main differences between C and Java?</h2>
     <table border="1px">
         <tr>
@@ -119,6 +122,8 @@
         </tr>
     </table>
 
+    <img src="https://4.bp.blogspot.com/-g3dTMrcqWuY/Uhwlqm9OW-I/AAAAAAAAASs/8JBnlVpladM/s1600/Screenshot+from+2013-08-27+09:46:11.png">
+
     <!--Source: https://www.le.ac.uk/users/rjm1/cotter/page_05.htm-->
     <h2>What is C mainly used for?</h2>
     <p>
@@ -137,6 +142,44 @@
     </p>
 
     <a href="">Click here to find out about more uses of C</a>
+
+    <h2>Main syntax differences</h2>
+
+    <h3>Hello world program in Java:</h3>
+    <code>
+        <pre>
+            public class HelloWorld {
+                public static void main(String[] args) {
+                  System.out.println("Hello World");
+                }
+            }
+        </pre>
+    </code>
+
+    <h3>Hello world program in C:</h3>
+    <code>
+        <pre>
+            #include &lt;stdio.h&gt;;
+            int main() {
+                printf("Hello World");
+                return 0;
+            }
+        </pre>
+
+    </code>
+
+    <img src="oh_i.png">
+
+    <h2>C programming basics</h2>
+    <dl>
+        <dt>#include &lt;stdio.h&gt;</dt>
+        <dd>This is a preprocessor command that includes standard input output header file(stdio.h) from the C library before compiling a C program</dd>
+        <dt>int main()</dt>
+        <dd>This is the main function from where execution of any C program begins.</dd>
+        <dt>printf(“Hello World!“);</dt>
+        <dd>printf command prints the output onto the screen.</dd>
+    </dl>
+    <a href="https://fresh2refresh.com/c-programming/c-basic-program/">Click here for more C programming basics</a>
 
     <footer>
 		<p>&copy Arnav Singhania</p>
