Added more html and css content

--- a/Content.html
+++ b/Content.html
@@ -143,6 +143,27 @@
 
     <a href="">Click here to find out about more uses of C</a>
 
+    <div class="verticalSection">
+        <div class="verticalComponent">
+            <a href="https://giphy.com/gifs/gossip-girl-programming-hacking-ZvLUtG6BZkBi0/links">
+                <img src="https://media.giphy.com/media/ZvLUtG6BZkBi0/giphy.gif" style="width:400px;height:400px;border:0;">
+                <br>TIRED? CHECK OUT THESE COOL GIFS 
+            </a>
+        </div>
+        <div class="verticalComponent">
+            <a href="https://github.com/justin-lathrop/c">
+                <img src="GitHub.png" style="width:400px;height:400px;border:0;">
+                <br>Check these git repositories for some exciting code 
+            </a>
+        </div>
+        <div class="verticalComponent">
+            <a href="https://giphy.com/gifs/gossip-girl-programming-hacking-ZvLUtG6BZkBi0/links">
+                <img src="https://media.giphy.com/media/yYSSBtDgbbRzq/giphy.gif" style="width:400px;height:400px;border:0;">
+                <br>TIRED? CHECK OUT THESE COOL GIFS 
+            </a>
+        </div>
+    </div>
+
     <h2>Main syntax differences</h2>
 
     <h3>Hello world program in Java:</h3>
@@ -178,6 +199,9 @@
         <dd>This is the main function from where execution of any C program begins.</dd>
         <dt>printf(“Hello World!“);</dt>
         <dd>printf command prints the output onto the screen.</dd>
+        <dt>Pointer</dt>
+        <dd>A pointer refers to a variable holding the memory address of another variable.</dd>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XISnO2YhnsY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>Click here dor a detailed description of pointers</iframe>
     </dl>
     <a href="https://fresh2refresh.com/c-programming/c-basic-program/">Click here for more C programming basics</a>
 
